--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@nextui-org/button": "^2.2.8",
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
+    "@reduxjs/toolkit": "^2.5.0",
     "framer-motion": "^11.15.0",
     "ky": "^1.7.4",
     "next": "15.1.3",
     "nextui-cli": "^0.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
