--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.15.0",
     "ky": "^1.7.4",
     "next": "15.1.3",
+    "next-nprogress-bar": "^2.4.3",
     "nextui-cli": "^0.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
