--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/input": "^2.4.10",
+    "@heroui/react": "^2.6.14",
     "@lottiefiles/dotlottie-react": "^0.12.2",
-    "@nextui-org/button": "^2.2.8",
-    "@nextui-org/system": "^2.4.5",
-    "@nextui-org/theme": "^2.4.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "framer-motion": "^11.15.0",
     "ky": "^1.7.4",
     "next": "15.1.3",
     "next-nprogress-bar": "^2.4.3",
-    "nextui-cli": "^0.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
