--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroui/input": "^2.4.10",
     "@heroui/react": "^2.6.14",
+    "@heroui/spinner": "^2.2.7",
     "@lottiefiles/dotlottie-react": "^0.12.2",
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/ssr": "^0.5.2",
@@ -21,6 +22,7 @@
     "next-nprogress-bar": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.1"
   },
